# Application-QML-Module-Demo

./: .gitignore  CMakeLists.txt  LICENSE  Logo.qml  README.md  main.qml
